...
        }
    }
}

object NavigatorDialogTags {
    const val DIALOG_TITLE = "DIALOG_TITLE"
    const val DIALOG_ACCEPT = "DIALOG_ACCEPT"
    const val DIALOG_CANCEL = "DIALOG_CANCEL"
    const val DIALOG_MESSAGE = "DIALOG_MESSAGE"
}
