...
    const val NUMBER_DIALOG_KEY_4 = "NUMBER_DIALOG_KEY_4"
    const val NUMBER_DIALOG_KEY_5 = "NUMBER_DIALOG_KEY_5"
    const val NUMBER_DIALOG_KEY_6 = "NUMBER_DIALOG_KEY_6"
    const val NUMBER_DIALOG_KEY_7 = "NUMBER_DIALOG_KEY_7"
    const val NUMBER_DIALOG_KEY_8 = "NUMBER_DIALOG_KEY_8"
    const val NUMBER_DIALOG_KEY_9 = "NUMBER_DIALOG_KEY_9"
    const val NUMBER_DIALOG_KEY_DELETE = "NUMBER_DIALOG_KEY_DELETE"
}

@Preview(
    name = "Tab Active 3 Landscape",
    showBackground = true,
    device = "spec:width=853dp,height=485dp, isRound=false, orientation=landscape",
...
